# ros-object-detection

./: CMakeLists.txt  package.xml
ros_locate/: CMakeLists.txt  package.xml  setup.py
ros_locate/src/: listener.py  obj_location.py
ros_locate_msgs/: CMakeLists.txt  package.xml
ros_locate_msgs/msg/: ObjLocation.msg
ros_search_and_follow/: CMakeLists.txt  package.xml
ros_search_and_follow/src/: search.py
src/: dino_tut.py  obj_detection.py
